# ACT4E-exercises

./: MANIFEST.in  pyproject.toml  setup.json
.devcontainer/: devcontainer.json  requirements.txt
src/act4e_solutions/: currency_ex.py  posets_bounds.py  semicategory_representation.py  semigroups_morphisms.py
